--- a/prepros.config
+++ b/prepros.config
@@ -4,7 +4,7 @@
   "config": {
     "proxy": {
       "enable": true,
-      "target": "http://local.mobig",
+      "target": "https://mobig.thefactorysw.net",
       "useLocalAssets": true
     },
     "reload": {
